Bug 1758473 - Move VA-API test into glxtest, r=stransky

Some VA-API drivers are so broken that trying to use them
crashes Firefox. This is nothing entirely new for GPU drivers
and which is why we have `glxtest`.

Thus move the test from `VAAPIUtils` there. This has the
additional benefit of only doing the test once.

Given the importance of GL-accelerated rendering these days,
we don't want failing VA-API drivers to disable hardware
Webrender and WebGL. Thus fork the VA-API test into its
own process.

Differential Revision: https://phabricator.services.mozilla.com/D148981